# MotorDriver

./: .gitignore  .mxproject  DriveForLearn_MDK.ioc  werew.txt
APP/: brushmotor.c  brushmotor.h  bsp.c  bsp.h
Core/Inc/: main.h  stm32f4xx_it.h
Core/Src/: adc.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
MDK-ARM/: .clangd  DriveForLearn_MDK+DriveForLearnMDK.cbuild.yml  DriveForLearn_MDK+DriveForLearnMDK.cprj  DriveForLearn_MDK.cbuild-idx.yml  DriveForLearn_MDK.cbuild-pack.yml  DriveForLearn_MDK.cbuild-set.yml  DriveForLearn_MDK.cproject.yml  DriveForLearn_MDK.csolution.yml  DriveForLearn_MDK.uvguix.dzh  DriveForLearn_MDK.uvoptx  DriveForLearn_MDK.uvprojx  vcpkg-configuration.json
MDK-ARM/DriveForLearn_MDK/: DriveForLearn_MDK.axf  DriveForLearn_MDK.build_log.htm  DriveForLearn_MDK.hex  DriveForLearn_MDK.htm  DriveForLearn_MDK.lnp  DriveForLearn_MDK.map  DriveForLearn_MDK_DriveForLearn_MDK.dep  adc.d  brushmotor.d  bsp.d  gpio.d  i2c.d  main.d  stm32f4xx_hal.d  stm32f4xx_hal_adc.d  stm32f4xx_hal_adc_ex.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_i2c.d  stm32f4xx_hal_i2c_ex.d  stm32f4xx_hal_msp.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_timebase_tim.d  stm32f4xx_hal_uart.d  stm32f4xx_it.d  stm32f4xx_ll_adc.d  system_stm32f4xx.d  tim.d  usart.d
MDK-ARM/RTE/_DriveForLearnMDK/: RTE_Components.h
MDK-ARM/RTE/_DriveForLearn_MDK/: RTE_Components.h
MDK-ARM/tmp/DriveForLearn_MDK/DriveForLearnMDK/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
